[tool.poetry]
name = "repl_python3_PartOfCoolpicBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
google-api-python-client = "^1.12.4"
python-dotenv = "^0.14.0"
youtube-dl = "^2020.9.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
